--- a/index.html
+++ b/index.html
@@ -132,9 +132,19 @@
 
 
 
+
 <span id="homepage" style="display: none"></span>
 
-
+<div class="image-wrap">
+  <img src=
+    
+      "http://strideradu.github.io/img/Dreamscape.jpg"
+    
+  alt="Works feature image">
+  
+    <span class="image-credit">Photo Credit: <a href="">Daniel Ambrosi</a></span>
+  
+  </div><!-- /.image-wrap -->
 
   
   
