--- a/index.html
+++ b/index.html
@@ -137,12 +137,8 @@
 
 <span id="homepage" style="display: none"></span>
 
-
-
-  
-  
-  <section id="about" class="home-section">
-  
+ <section id="headers" class="home-section">
+    <div class="container"> 
   <div class="image-wrap">
   <img src=
     
@@ -153,6 +149,13 @@
     <span class="image-credit">Photo Credit: <a href="">Kaito Kikuchi</a></span>
   
   </div><!-- /.image-wrap -->
+  </div>
+ </section>
+
+  
+  
+  <section id="about" class="home-section">
+
 
   
     <div class="container">
