--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     
       "http://strideradu.github.io/img/Dreamscape.jpg"
     
-  alt="Works feature image">
+  class="article-banner" itemprop="image">
   
     <span class="image-credit">Photo Credit: <a href="">Kaito Kikuchi</a></span>
   
