Change div class

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
  <section id="headers" class="home-section">
      
-  <div class="image-wrap">
+  <div class="article-header">
   <img src=
     
       "http://strideradu.github.io/img/Dreamscape.jpg"
