Change section class

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <span id="homepage" style="display: none"></span>
 
- <section id="headers" class="home-section">
+ <section id="headers" class="pub">
      
   <div class="article-header">
   <img src=
