--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         
 
         <li class="nav-item">
-          <a href="/pdf/Nan%20Du%20CV-2017Feb.pdf" data-target="pdf/Nan Du CV-2017Feb.pdf">
+          <a href="/pdf/Nan%20Du%20CV.pdf" data-target="pdf/Nan Du CV.pdf">
             
             <span>CV</span>
           </a>
